style: add update customer info storefront

--- a/ui/storefront/Areas/User/Views/Account/Index.cshtml
+++ b/ui/storefront/Areas/User/Views/Account/Index.cshtml
@@ -47,6 +47,7 @@
                             <option value="@Gender.Female">@Gender.Female</option>
                             <option value="@Gender.Other">@Gender.Other</option>
                         </select>
+                        <span asp-validation-for="Gender" class="text-red-900"></span>
                     </div>
                     <div class="flex justify-end">
                         <button type="submit"
