--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/output.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/lib/dist/sweetalert2/sweetalert2.css" asp-append-version="true"/>
 </head>
 <body class="flex flex-col min-h-screen pt-24">
-<header class="shadow-sm">
+<header id="head" class="shadow-sm">
     <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a asp-area="" asp-controller="Home" asp-action="Index" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -25,7 +26,7 @@
                         </li>
                         @await Component.InvokeAsync("BasketButton")
                         <li>
-                            <a asp-area="User" asp-controller="Account" asp-action="Logout" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
+                            <a id="logout-btn" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
                         </li>
                     </ul>
                 }
@@ -83,9 +84,30 @@
     </div>
 </footer>
 
-<script src="~/lib/dist/jquery/dist/jquery.min.js" asp-append-version="true"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/dist/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+<script src="~/lib/dist/sweetalert2/sweetalert2.min.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", false)
+
+<script>
+    $(document).ready(function () {
+        $('#logout-btn').click(function () {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: 'You will be logged out.',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, log out!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = '/User/Account/Logout';
+                }
+            });
+        });
+    });
+</script>
 
 </body>
 </html>
