test: add categories integration test

--- a/ui/storefront/Views/Shared/Components/BasketButton/Default.cshtml
+++ b/ui/storefront/Views/Shared/Components/BasketButton/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model int
 
 <li>
-    <a class="flex items-center space-x-2 justify-center py-4 pr-2">
+    <a asp-area="Basket" asp-controller="Basket" asp-action="Index" class="flex items-center space-x-2 justify-center py-4 pr-2">
         <div class="relative">
             @if (Model > 0)
             {
