--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/output.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/lib/dist/sweetalert2/sweetalert2.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/lib/dist/font-awesome/css/fontawesome.min.css" asp-append-version="true" />
 </head>
 <body class="flex flex-col min-h-screen pt-24">
 <header id="head" class="shadow-sm">
